--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.14.14",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-slideshow-image": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
