--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-slideshow-image": "^4.3.0"
+    "react-slideshow-image": "^4.3.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
