--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.16.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
     "react": "^18",
