--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-slideshow-image": "^4.3.0",
     "swr": "^2.2.4"
   },
