--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "@mui/x-data-grid": "^6.16.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "jose": "^5.1.0",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
     "react": "^18",
