--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
